--- a/index.html
+++ b/index.html
@@ -436,6 +436,35 @@
 							</div>
 						</div>
 					</div>
+
+					<div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+						<div class="member" data-aos="fade-up" data-aos-delay="100">
+							<div class="member-img">
+								<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/mona-3_pzxhjy.jpg"
+									class="img-fluid" alt="">
+							</div>
+							<div class="member-info">
+								<h4>Mrs. Mona Kumari</h4>
+								<span>Relationship Manager</span>
+								<p class="mt-3">Mrs. Mona Kumari is an MBA in Human Resource and takes care of general day to day functioning and well being of the company.
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+						<div class="member" data-aos="fade-up" data-aos-delay="200">
+							<div class="member-img">
+								<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/maya-one_kwlmx6.jpg"
+									class="img-fluid" alt="" style="margin-top: -16px;">
+							</div>
+							<div class="member-info">
+								<h4>Mrs. Maya</h4>
+								<span>Customer Service Manager</span>
+								<p class="mt-3">With an educational qualification of Commerce graduate, Mrs. Maya wonderfully manages all the customer service requests and calls.
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 			</div>
@@ -548,7 +577,7 @@
 								</ul>
 							</div>
 							<div class="col-lg-6 order-1 order-lg-2 text-center">
-								<img src="https://res.cloudinary.com/suvishakha/image/upload/v1630845525/drayurveda/ing16_dawp10.jpg"
+								<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632006028/drayurveda/pse_tx3twn.jpg"
 									alt="" class="img-fluid">
 							</div>
 						</div>
@@ -587,7 +616,7 @@
 								</p>
 							</div>
 							<div class="col-lg-6 order-1 order-lg-2 text-center">
-								<img src="https://res.cloudinary.com/suvishakha/image/upload/v1630846198/drayurveda/img18_l4evwl.png"
+								<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/low-se-desire_olq1om.jpg"
 									alt="" class="img-fluid">
 							</div>
 						</div>
@@ -625,7 +654,7 @@
 								</ul>
 							</div>
 							<div class="col-lg-6 order-1 order-lg-2 text-center">
-								<img src="https://res.cloudinary.com/suvishakha/image/upload/v1630846434/drayurveda/img19_gvrjie.jpg"
+								<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005574/drayurveda/oligospermia-male_zoyudb.jpg"
 									alt="" class="img-fluid">
 							</div>
 						</div>
@@ -759,36 +788,6 @@
 						</div>
 					</div>
 
-					<!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<div class="portfolio-wrap">
-							<img style="max-height: fit-content;" src="https://res.cloudinary.com/suvishakha/image/upload/v1631651568/drayurveda/dr-greeshma-das-3_qlxo6u.jpg" class="img-fluid" alt="">
-							<div class="portfolio-info">
-								<h4>App 2</h4>
-								<p>App</p>
-								<div class="portfolio-links">
-									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631651568/drayurveda/dr-greeshma-das-3_qlxo6u.jpg" data-gall="portfolioGallery"
-										class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
-									<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-md-6 portfolio-item filter-card">
-						<div class="portfolio-wrap">
-							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1631651565/drayurveda/dr-greeshma-das-2_k3koht.jpg" class="img-fluid" alt="">
-							<div class="portfolio-info">
-								<h4>Card 2</h4>
-								<p>Card</p>
-								<div class="portfolio-links">
-									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631651565/drayurveda/dr-greeshma-das-2_k3koht.jpg" data-gall="portfolioGallery"
-										class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
-									<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-								</div>
-							</div>
-						</div>
-					</div> -->
-
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
 							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1631651563/drayurveda/dr-greeshma-das-1_mwyozv.jpg" class="img-fluid" alt="">
@@ -804,46 +803,16 @@
 						</div>
 					</div>
 
-					<!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-1_vj3zay.jpg" class="img-fluid" alt="">
 							<div class="portfolio-info">
-								<h4>App 3</h4>
-								<p>App</p>
+								<!-- <h4>App 1</h4>
+								<p>App</p> -->
 								<div class="portfolio-links">
-									<a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery"
-										class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
-									<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-md-6 portfolio-item filter-card">
-						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-							<div class="portfolio-info">
-								<h4>Card 1</h4>
-								<p>Card</p>
-								<div class="portfolio-links">
-									<a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery"
-										class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
-									<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-md-6 portfolio-item filter-card">
-						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-							<div class="portfolio-info">
-								<h4>Card 3</h4>
-								<p>Card</p>
-								<div class="portfolio-links">
-									<a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery"
-										class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
-									<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-1_vj3zay.jpg" data-gall="portfolioGallery"
+										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
 								</div>
 							</div>
 						</div>
@@ -851,19 +820,159 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-2_hklcoa.jpg" class="img-fluid" alt="">
 							<div class="portfolio-info">
-								<h4>Web 3</h4>
-								<p>Web</p>
+								<!-- <h4>Web 3</h4>
+								<p>Web</p> -->
 								<div class="portfolio-links">
-									<a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery"
-										class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-									<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-2_hklcoa.jpg" data-gall="portfolioGallery"
+										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
+						<div class="portfolio-wrap">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-3_tnrwaj.jpg" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<!-- <h4>Web 2</h4>
+								<p>Web</p> -->
+								<div class="portfolio-links">
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-3_tnrwaj.jpg" data-gall="portfolioGallery"
+										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
+						<div class="portfolio-wrap">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-7_ncfl9k.jpg" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<!-- <h4>Web 3</h4>
+								<p>Web</p> -->
+								<div class="portfolio-links">
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-7_ncfl9k.jpg" data-gall="portfolioGallery"
+										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
+						<div class="portfolio-wrap">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-6_pkuj6v.jpg" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<!-- <h4>Web 3</h4>
+								<p>Web</p> -->
+								<div class="portfolio-links">
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-6_pkuj6v.jpg" data-gall="portfolioGallery"
+										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
+						<div class="portfolio-wrap">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005551/drayurveda/gallery-10_fnvkuf.jpg" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<!-- <h4>Web 2</h4>
+								<p>Web</p> -->
+								<div class="portfolio-links">
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005551/drayurveda/gallery-10_fnvkuf.jpg" data-gall="portfolioGallery"
+										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="portfolio-wrap">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-5_ri5fms.jpg" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<div class="portfolio-links">
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-5_ri5fms.jpg" data-gall="portfolioGallery"
+										class="venobox" title=""><i class="bx bx-plus"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
+						<div class="portfolio-wrap">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-8_wl72j4.jpg" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<div class="portfolio-links">
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-8_wl72j4.jpg" data-gall="portfolioGallery"
+										class="venobox" title=""><i class="bx bx-plus"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+					
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="portfolio-wrap">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-4_cwozzu.jpg" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<div class="portfolio-links">
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-4_cwozzu.jpg" data-gall="portfolioGallery"
+										class="venobox" title=""><i class="bx bx-plus"></i></a>
 								</div>
 							</div>
 						</div>
 					</div> -->
 
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="portfolio-wrap">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/mona-1_e1vnqw.jpg" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<!-- <h4>App 1</h4>
+								<p>App</p> -->
+								<div class="portfolio-links">
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/mona-1_e1vnqw.jpg" data-gall="portfolioGallery"
+										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
+						<div class="portfolio-wrap">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/maya-two_ph5ebi.jpg" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<!-- <h4>Web 2</h4>
+								<p>Web</p> -->
+								<div class="portfolio-links">
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/maya-two_ph5ebi.jpg" data-gall="portfolioGallery"
+										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+								</div>
+							</div>
+						</div>
+					</div>
+					
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="portfolio-wrap">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/mona-2_dorstc.jpg" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<!-- <h4>App 1</h4>
+								<p>App</p> -->
+								<div class="portfolio-links">
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/mona-2_dorstc.jpg" data-gall="portfolioGallery"
+										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section><!-- End Portfolio Section -->
