--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<title>Dr. Ayurveda</title>
+	<title>Dr. Ayurveda Sexologist</title>
 	<meta
 		content="24 ×7 TOP AYURVEDIC SEXOLOGIST IN INDIA, TOP AYURVEDIC SEXOLOGIST FOR PREMATURE EJACULATION, ERECTILE DYSFUNCTION, LOW SEXUAL DESIRE, OLIGOSPERMIA"
 		name="description">
@@ -14,7 +14,7 @@
 		name="keywords">
 
 	<!-- Favicons -->
-	<link href="assets/img/favicon.png" rel="icon">Î
+	<link href="https://res.cloudinary.com/suvishakha/image/upload/v1632222297/drayurveda/logo_xio8kf.png" rel="icon">Î
 	<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
 	<!-- Google Fonts -->
@@ -53,9 +53,11 @@
 		<div class="container-fluid">
 			<div class="row justify-content-center">
 				<div class="col-xl-10 d-flex align-items-center">
-					<h1 class="logo mr-auto"><a href="index.html">Dr. Ayurveda<span>.</span></a></h1>
+					<!-- <h1 class="logo mr-auto"><a href="index.html">Dr. Ayurveda<span>.</span></a></h1> -->
 					<!-- Uncomment below if you prefer to use an image logo -->
-					<!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt=""></a>-->
+					<a href="index.html" class="logo mr-auto"><img src="https://res.cloudinary.com/suvishakha/image/upload/v1632222297/drayurveda/logo_xio8kf.png" alt="">
+						<span style="color: black;">Dr. Ayurveda </span><span>Sexologist</span>
+					</a>
 
 					<nav class="nav-menu d-none d-lg-block">
 						<ul>
@@ -104,26 +106,66 @@
 				<!-- Slide 1 -->
 				<div class="carousel-item active"
 					style="background-image: url(https://res.cloudinary.com/suvishakha/image/upload/v1631643946/drayurveda/couple_qx07no.jpg)">
+					<div class="carousel-container">
+						<div class="carousel-content container">
+							<h2 class="animate__animated animate__fadeInDown carousel-text">
+								Save Your Relationship Before It’s Too Late
+							</h2>
+							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+						</div>
+					</div>
 				</div>
 
 				<!-- Slide 2 -->
 				<div class="carousel-item"
 					style="background-image: url(https://res.cloudinary.com/suvishakha/image/upload/v1631644110/drayurveda/6159753_scaletowidth768x563_jpeg8753cc248f8429e8d60c6488bfab0023_nitljm.jpg)">
+					<div class="carousel-container">
+						<div class="carousel-content container">
+							<h2 class="animate__animated animate__fadeInDown carousel-text">
+								Save Your Relationship Before It’s Too Late
+							</h2>
+							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+						</div>
+					</div>
 				</div>
 
 				<!-- Slide 3 -->
 				<div class="carousel-item"
 					style="background-image: url(https://res.cloudinary.com/suvishakha/image/upload/v1631644207/drayurveda/couple_main4_zbcnqx.jpg)">
+					<div class="carousel-container">
+						<div class="carousel-content container">
+							<h2 class="animate__animated animate__fadeInDown carousel-text">
+								Save Your Relationship Before It’s Too Late
+							</h2>
+							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+						</div>
+					</div>
 				</div>
 
 				<!-- Slide 4 -->
 				<div class="carousel-item"
 					style="background-image: url(https://res.cloudinary.com/suvishakha/image/upload/v1631644313/drayurveda/healthy_sex_fb_jl3gr1.jpg)">
+					<div class="carousel-container">
+						<div class="carousel-content container">
+							<h2 class="animate__animated animate__fadeInDown carousel-text">
+								Save Your Relationship Before It’s Too Late
+							</h2>
+							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+						</div>
+					</div>
 				</div>
 
 				<!-- Slide 5 -->
 				<div class="carousel-item"
 					style="background-image: url(https://res.cloudinary.com/suvishakha/image/upload/v1631644467/drayurveda/_93064047_couple_hizwbe.jpg)">
+					<div class="carousel-container">
+						<div class="carousel-content container">
+							<h2 class="animate__animated animate__fadeInDown carousel-text">
+								Save Your Relationship Before It’s Too Late
+							</h2>
+							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+						</div>
+					</div>
 				</div>
 			</div>
 
@@ -446,7 +488,8 @@
 							<div class="member-info">
 								<h4>Mrs. Mona Kumari</h4>
 								<span>Relationship Manager</span>
-								<p class="mt-3">Mrs. Mona Kumari is an MBA in Human Resource and takes care of general day to day functioning and well being of the company.
+								<p class="mt-3">Mrs. Mona Kumari is an MBA in Human Resource and takes care of general
+									day to day functioning and well being of the company.
 								</p>
 							</div>
 						</div>
@@ -461,7 +504,8 @@
 							<div class="member-info">
 								<h4>Mrs. Maya</h4>
 								<span>Customer Service Manager</span>
-								<p class="mt-3">With an educational qualification of Commerce graduate, Mrs. Maya wonderfully manages all the customer service requests and calls.
+								<p class="mt-3">With an educational qualification of Commerce graduate, Mrs. Maya
+									wonderfully manages all the customer service requests and calls.
 							</div>
 						</div>
 					</div>
@@ -760,13 +804,15 @@
 				<div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1631651778/drayurveda/dr-murshid-3_me6lqq.jpg" class="img-fluid" alt="">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1631651778/drayurveda/dr-murshid-3_me6lqq.jpg"
+								class="img-fluid" alt="">
 							<div class="portfolio-info">
 								<!-- <h4>App 1</h4>
 								<p>App</p> -->
 								<div class="portfolio-links">
-									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631651778/drayurveda/dr-murshid-3_me6lqq.jpg" data-gall="portfolioGallery"
-										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631651778/drayurveda/dr-murshid-3_me6lqq.jpg"
+										data-gall="portfolioGallery" class="venobox" title=""><i
+											class="bx bx-plus"></i></a>
 									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
 								</div>
 							</div>
@@ -775,13 +821,15 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
-							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1631651772/drayurveda/dr-murshid-2_cif4gi.jpg" class="img-fluid" alt="">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1631651772/drayurveda/dr-murshid-2_cif4gi.jpg"
+								class="img-fluid" alt="">
 							<div class="portfolio-info">
 								<!-- <h4>Web 3</h4>
 								<p>Web</p> -->
 								<div class="portfolio-links">
-									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631651772/drayurveda/dr-murshid-2_cif4gi.jpg" data-gall="portfolioGallery"
-										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631651772/drayurveda/dr-murshid-2_cif4gi.jpg"
+										data-gall="portfolioGallery" class="venobox" title=""><i
+											class="bx bx-plus"></i></a>
 									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
 								</div>
 							</div>
@@ -790,13 +838,15 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
-							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1631651563/drayurveda/dr-greeshma-das-1_mwyozv.jpg" class="img-fluid" alt="">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1631651563/drayurveda/dr-greeshma-das-1_mwyozv.jpg"
+								class="img-fluid" alt="">
 							<div class="portfolio-info">
 								<!-- <h4>Web 2</h4>
 								<p>Web</p> -->
 								<div class="portfolio-links">
-									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631651563/drayurveda/dr-greeshma-das-1_mwyozv.jpg" data-gall="portfolioGallery"
-										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631651563/drayurveda/dr-greeshma-das-1_mwyozv.jpg"
+										data-gall="portfolioGallery" class="venobox" title=""><i
+											class="bx bx-plus"></i></a>
 									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
 								</div>
 							</div>
@@ -805,13 +855,15 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-1_vj3zay.jpg" class="img-fluid" alt="">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-1_vj3zay.jpg"
+								class="img-fluid" alt="">
 							<div class="portfolio-info">
 								<!-- <h4>App 1</h4>
 								<p>App</p> -->
 								<div class="portfolio-links">
-									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-1_vj3zay.jpg" data-gall="portfolioGallery"
-										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-1_vj3zay.jpg"
+										data-gall="portfolioGallery" class="venobox" title=""><i
+											class="bx bx-plus"></i></a>
 									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
 								</div>
 							</div>
@@ -820,13 +872,15 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
-							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-2_hklcoa.jpg" class="img-fluid" alt="">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-2_hklcoa.jpg"
+								class="img-fluid" alt="">
 							<div class="portfolio-info">
 								<!-- <h4>Web 3</h4>
 								<p>Web</p> -->
 								<div class="portfolio-links">
-									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-2_hklcoa.jpg" data-gall="portfolioGallery"
-										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-2_hklcoa.jpg"
+										data-gall="portfolioGallery" class="venobox" title=""><i
+											class="bx bx-plus"></i></a>
 									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
 								</div>
 							</div>
@@ -835,13 +889,15 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
-							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-3_tnrwaj.jpg" class="img-fluid" alt="">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-3_tnrwaj.jpg"
+								class="img-fluid" alt="">
 							<div class="portfolio-info">
 								<!-- <h4>Web 2</h4>
 								<p>Web</p> -->
 								<div class="portfolio-links">
-									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-3_tnrwaj.jpg" data-gall="portfolioGallery"
-										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-3_tnrwaj.jpg"
+										data-gall="portfolioGallery" class="venobox" title=""><i
+											class="bx bx-plus"></i></a>
 									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
 								</div>
 							</div>
@@ -850,13 +906,15 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
-							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-7_ncfl9k.jpg" class="img-fluid" alt="">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-7_ncfl9k.jpg"
+								class="img-fluid" alt="">
 							<div class="portfolio-info">
 								<!-- <h4>Web 3</h4>
 								<p>Web</p> -->
 								<div class="portfolio-links">
-									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-7_ncfl9k.jpg" data-gall="portfolioGallery"
-										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-7_ncfl9k.jpg"
+										data-gall="portfolioGallery" class="venobox" title=""><i
+											class="bx bx-plus"></i></a>
 									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
 								</div>
 							</div>
@@ -865,13 +923,15 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
-							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-6_pkuj6v.jpg" class="img-fluid" alt="">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-6_pkuj6v.jpg"
+								class="img-fluid" alt="">
 							<div class="portfolio-info">
 								<!-- <h4>Web 3</h4>
 								<p>Web</p> -->
 								<div class="portfolio-links">
-									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-6_pkuj6v.jpg" data-gall="portfolioGallery"
-										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-6_pkuj6v.jpg"
+										data-gall="portfolioGallery" class="venobox" title=""><i
+											class="bx bx-plus"></i></a>
 									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
 								</div>
 							</div>
@@ -880,13 +940,15 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
-							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005551/drayurveda/gallery-10_fnvkuf.jpg" class="img-fluid" alt="">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005551/drayurveda/gallery-10_fnvkuf.jpg"
+								class="img-fluid" alt="">
 							<div class="portfolio-info">
 								<!-- <h4>Web 2</h4>
 								<p>Web</p> -->
 								<div class="portfolio-links">
-									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005551/drayurveda/gallery-10_fnvkuf.jpg" data-gall="portfolioGallery"
-										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005551/drayurveda/gallery-10_fnvkuf.jpg"
+										data-gall="portfolioGallery" class="venobox" title=""><i
+											class="bx bx-plus"></i></a>
 									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
 								</div>
 							</div>
@@ -931,13 +993,15 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/mona-1_e1vnqw.jpg" class="img-fluid" alt="">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/mona-1_e1vnqw.jpg"
+								class="img-fluid" alt="">
 							<div class="portfolio-info">
 								<!-- <h4>App 1</h4>
 								<p>App</p> -->
 								<div class="portfolio-links">
-									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/mona-1_e1vnqw.jpg" data-gall="portfolioGallery"
-										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/mona-1_e1vnqw.jpg"
+										data-gall="portfolioGallery" class="venobox" title=""><i
+											class="bx bx-plus"></i></a>
 									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
 								</div>
 							</div>
@@ -946,28 +1010,32 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
-							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/maya-two_ph5ebi.jpg" class="img-fluid" alt="">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/maya-two_ph5ebi.jpg"
+								class="img-fluid" alt="">
 							<div class="portfolio-info">
 								<!-- <h4>Web 2</h4>
 								<p>Web</p> -->
 								<div class="portfolio-links">
-									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/maya-two_ph5ebi.jpg" data-gall="portfolioGallery"
-										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/maya-two_ph5ebi.jpg"
+										data-gall="portfolioGallery" class="venobox" title=""><i
+											class="bx bx-plus"></i></a>
 									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
 								</div>
 							</div>
 						</div>
 					</div>
-					
+
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/mona-2_dorstc.jpg" class="img-fluid" alt="">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/mona-2_dorstc.jpg"
+								class="img-fluid" alt="">
 							<div class="portfolio-info">
 								<!-- <h4>App 1</h4>
 								<p>App</p> -->
 								<div class="portfolio-links">
-									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/mona-2_dorstc.jpg" data-gall="portfolioGallery"
-										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/mona-2_dorstc.jpg"
+										data-gall="portfolioGallery" class="venobox" title=""><i
+											class="bx bx-plus"></i></a>
 									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
 								</div>
 							</div>
