--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<li><a href="#sectionGallery">Gallery</a></li>
 							<li><a href="#sectionFAQ">FAQ</a></li>
 							<li><a href="#sectionTestimonials">Testimonials</a></li>
-							<li><a href="https://riteshworksuvishakha.blogspot.com/">Blog</a></li>
+							<li><a target="_" href="https://drayurvedasexologist.blogspot.com/">Blog</a></li>
 							<!-- <li class="drop-down"><a href="">Drop Down</a>
 								<ul>
 									<li><a href="#">Drop Down 1</a></li>
