--- a/index.html
+++ b/index.html
@@ -167,6 +167,71 @@
 						</div>
 					</div>
 				</div>
+
+				<!-- Slide 6 -->
+				<div class="carousel-item"
+					style="background-image: url(https://res.cloudinary.com/suvishakha/image/upload/v1633204509/drayurveda/carousel-1-1_za5eyd.jpg)">
+					<div class="carousel-container">
+						<div class="carousel-content container">
+							<h2 class="animate__animated animate__fadeInDown carousel-text">
+								Save Your Relationship Before It’s Too Late
+							</h2>
+							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+						</div>
+					</div>
+				</div>
+
+				<!-- Slide 7 -->
+				<div class="carousel-item"
+					style="background-image: url(https://res.cloudinary.com/suvishakha/image/upload/v1633204509/drayurveda/carousel-1-2_pg4ftz.jpg)">
+					<div class="carousel-container">
+						<div class="carousel-content container">
+							<h2 class="animate__animated animate__fadeInDown carousel-text">
+								Save Your Relationship Before It’s Too Late
+							</h2>
+							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+						</div>
+					</div>
+				</div>
+
+				<!-- Slide 8 -->
+				<div class="carousel-item"
+					style="background-image: url(https://res.cloudinary.com/suvishakha/image/upload/v1633204509/drayurveda/carousel-1-3_atakja.jpg)">
+					<div class="carousel-container">
+						<div class="carousel-content container">
+							<h2 class="animate__animated animate__fadeInDown carousel-text">
+								Save Your Relationship Before It’s Too Late
+							</h2>
+							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+						</div>
+					</div>
+				</div>
+
+				<!-- Slide 9 -->
+				<div class="carousel-item"
+					style="background-image: url(https://res.cloudinary.com/suvishakha/image/upload/v1633204509/drayurveda/carousel-1-4_nlijk5.jpg)">
+					<div class="carousel-container">
+						<div class="carousel-content container">
+							<h2 class="animate__animated animate__fadeInDown carousel-text">
+								Save Your Relationship Before It’s Too Late
+							</h2>
+							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+						</div>
+					</div>
+				</div>
+
+				<!-- Slide 10 -->
+				<div class="carousel-item"
+					style="background-image: url(https://res.cloudinary.com/suvishakha/image/upload/v1633204509/drayurveda/carousel-1-5_ewkdtm.jpg)">
+					<div class="carousel-container">
+						<div class="carousel-content container">
+							<h2 class="animate__animated animate__fadeInDown carousel-text">
+								Save Your Relationship Before It’s Too Late
+							</h2>
+							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+						</div>
+					</div>
+				</div>
 			</div>
 
 			<a class="carousel-control-prev" href="#heroCarousel" role="button" data-slide="prev">
@@ -480,6 +545,33 @@
 					</div>
 
 					<div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+						<div class="member" data-aos="fade-up" data-aos-delay="200">
+							<div class="member-img">
+								<img src="https://res.cloudinary.com/suvishakha/image/upload/v1633202993/drayurveda/akshayanand-1_kmygws.jpg"
+									class="img-fluid" alt="" style="margin-top: -16px;">
+							</div>
+							<div class="member-info">
+								<h4>Dr. Akshayanand Vashisht</h4>
+								<span>Senior Doctor</span>
+								<p class="mt-3">Dr. Akshayanand Vashisht is an ayurvedic doctor. He has completed his B.A.M.S. degree from Guru Ravidas Ayurved University Hoshiarpur,  Punjab.
+									<br><br>
+									He has 6 years of strong experience in treating male disorders like <strong>Erectile Dysfunction, Premature Ejaculation and Low Libido </strong> in men.
+							</div>
+
+							<div style="margin-bottom: 15px;">
+								<a href="https://res.cloudinary.com/suvishakha/image/upload/v1633203273/drayurveda/akshayanand-practise_ysjlfc.jpg"
+									target="_" style="margin-left: 15px;">
+									Practice Certificate
+								</a>
+								<a href="https://res.cloudinary.com/suvishakha/image/upload/v1633203272/drayurveda/akshayanand-bams_cwk47c.jpg"
+									target="_" style="float: right;" style="padding-right: 15px;">
+									BAMS Certificate
+								</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-6 col-md-6 d-flex align-items-stretch">
 						<div class="member" data-aos="fade-up" data-aos-delay="100">
 							<div class="member-img">
 								<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/mona-3_pzxhjy.jpg"
@@ -634,29 +726,15 @@
 										enhancement products</strong>.
 								</h3>
 								<p>
-									Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-									reprehenderit in
-									voluptate
-									velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-									non proident,
-									sunt in
-									culpa qui officia deserunt mollit anim id est laborum
+									When you have low sexual desire, you lose interest in engaging in a physical relationship. It has found that minor sexual problems can often lead to impotence later in life if they are not treated. The problem is that people don’t want to discuss such problems due to embarrassment and so they are reluctant to consult with doctors about these issues. You should not hesitate and go to an Ayurvedic sexologist doctor for effective treatment. This is because, rather than addressing the root cause of the problem, a lot of other treatment methods target only the symptoms.
 								</p>
 								<ul>
-									<li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea
-										commodo consequat.</li>
-									<li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in
-										voluptate velit.
+									<li><i class="ri-check-double-line"></i> Moreover, the medicines used in the treatments have harmful side effects.</li>
+									<li><i class="ri-check-double-line"></i> Ayurveda is able to give you a complete solution to this problem without any side effects. It is completely safe and natural.
 									</li>
-									<li><i class="ri-check-double-line"></i> Provident mollitia neque rerum asperiores
-										dolores quos qui a.
-										Ipsum neque dolor voluptate nisi sed.</li>
+									<li><i class="ri-check-double-line"></i> Our sexual medicine doctors will give you Ayurvedic medicines according to your body type and they will work on the factors like depression, anxiety and stress, which lower your sex drive. On taking these medicines, your body vitality and blood flow will increase. It will increase your libido without any side effects.</li>
 								</ul>
 								<p class="font-italic">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-									incididunt ut labore et
-									dolore
-									magna aliqua.
 								</p>
 							</div>
 							<div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -668,33 +746,19 @@
 					<div class="tab-pane" id="tab-4">
 						<div class="row">
 							<div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
-								<h3>Omnis fugiat ea explicabo sunt dolorum asperiores sequi inventore rerum</h3>
+								<h3>Oligospermia is a condition in which a man ejaculates inadequate count of sperms in semen to make her pregnant.</h3>
 								<p>
-									Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-									reprehenderit in
-									voluptate
-									velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-									non proident,
-									sunt in
-									culpa qui officia deserunt mollit anim id est laborum
+									Herbal treatment is recommended to fix this problem in a natural way. Lack of sperms or Oligospermia is the major cause of male infertility. It is medically accepted that a man needs to release 20 million sperms in each mm of semen to impregnate her female partner. Lack of sperm count terribly decreases the chances.
 								</p>
 								<p class="font-italic">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-									incididunt ut labore et
-									dolore
-									magna aliqua.
+									When a man suffers from Oligospermia, herbal treatment is the most effective, safe and natural cure for this condition. It doesn’t create any negative effects on a couple.
 								</p>
 								<ul>
-									<li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea
-										commodo consequat.</li>
-									<li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in
-										voluptate velit.
-									</li>
-									<li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea
-										commodo consequat. Duis
-										aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro
-										dolore eu fugiat nulla
-										pariatur.</li>
+									<li><i class="ri-check-double-line"></i> Lack of physical activities.</li>
+									<li><i class="ri-check-double-line"></i> Insufficient testosterone.</li>
+									<li><i class="ri-check-double-line"></i> Prolong use of drugs.</li>
+									<li><i class="ri-check-double-line"></i> Extensive consumption of alcohol.</li>
+									<li><i class="ri-check-double-line"></i> Bad food habits such as spicy food and improper diet.</li>
 								</ul>
 							</div>
 							<div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -1034,6 +1098,57 @@
 								<p>App</p> -->
 								<div class="portfolio-links">
 									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/mona-2_dorstc.jpg"
+										data-gall="portfolioGallery" class="venobox" title=""><i
+											class="bx bx-plus"></i></a>
+									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="portfolio-wrap">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1633202993/drayurveda/akshayanand-2_cxdrvf.jpg"
+								class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<!-- <h4>App 1</h4>
+								<p>App</p> -->
+								<div class="portfolio-links">
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1633202993/drayurveda/akshayanand-2_cxdrvf.jpg"
+										data-gall="portfolioGallery" class="venobox" title=""><i
+											class="bx bx-plus"></i></a>
+									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="portfolio-wrap">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1633202993/drayurveda/akshayanand-3_kdz72o.jpg"
+								class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<!-- <h4>App 1</h4>
+								<p>App</p> -->
+								<div class="portfolio-links">
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1633202993/drayurveda/akshayanand-3_kdz72o.jpg"
+										data-gall="portfolioGallery" class="venobox" title=""><i
+											class="bx bx-plus"></i></a>
+									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="portfolio-wrap">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1633202993/drayurveda/akshayanand-4_stwvry.jpg"
+								class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<!-- <h4>App 1</h4>
+								<p>App</p> -->
+								<div class="portfolio-links">
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1633202993/drayurveda/akshayanand-4_stwvry.jpg"
 										data-gall="portfolioGallery" class="venobox" title=""><i
 											class="bx bx-plus"></i></a>
 									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
