--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 		rel="stylesheet">
 
 	<!-- Vendor CSS Files -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
 	<link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
@@ -36,7 +38,7 @@
 </head>
 
 <body>
-	<section id="topbar" class="d-none d-lg-flex align-items-center fixed-top topbar-transparent">
+	<!-- <section id="topbar" class="d-none d-lg-flex align-items-center fixed-top topbar-transparent">
 		<div class="container-fluid text-right">
 			<div class="row justify-content-center">
 				<div class="col-xl-10">
@@ -47,7 +49,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- ======= Header ======= -->
 	<header id="header" class="fixed-top">
 		<div class="container-fluid">
@@ -98,6 +100,9 @@
 		</div>
 	</header><!-- End Header -->
 
+	<a href="https://api.whatsapp.com/send?phone=9907856800&text=Hello!" class="floating" target="_blank">
+		<i class="fa fa-whatsapp float-button"></i>
+	</a>
 
 	<section id="hero">
 		<div id="heroCarousel" class="carousel slide carousel-fade" data-ride="carousel">
