--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		</div>
 	</header><!-- End Header -->
 
-	<a href="https://api.whatsapp.com/send?phone=9907856800&text=Hello!" class="floating" target="_blank">
+	<a href="https://api.whatsapp.com/send?phone=+919907856800&text=Hello!" class="floating" target="_blank">
 		<i class="fa fa-whatsapp float-button"></i>
 	</a>
 
