--- a/index.html
+++ b/index.html
@@ -334,10 +334,7 @@
 								<div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
 									<i class="bx bx-images"></i>
 									<h4>Low Sexual Desire</h4>
-									<p>Penis enlargement is any technique aimed to increase the size of a human penis.
-										Some methods aim to increase total
-										length, others the shaft’s girth, and yet others the glans size.
-
+									<p>When you have low sexual desire, you lose interest in engaging in a physical relationship. It has been found that minor sexual problems can often lead to impotence later in life if they are not treated.
 									</p>
 								</div>
 								<div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
