--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
 		</div>
 	</header><!-- End Header -->
 
+	<a href="tel: 9907856800" class="floating2" target="_blank">
+		<i class="fa fa-phone float-button2"></i>
+	</a>
+
 	<a href="https://api.whatsapp.com/send?phone=+919907856800&text=Hello!" class="floating" target="_blank">
 		<i class="fa fa-whatsapp float-button"></i>
 	</a>
