--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					<div class="carousel-container">
 						<div class="carousel-content container">
 							<h2 class="animate__animated animate__fadeInDown carousel-text">
-								Save Your Relationship Before It’s Too Late
+								Your partner needs better sex. So do you!
 							</h2>
 							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
 						</div>
@@ -144,7 +144,7 @@
 					<div class="carousel-container">
 						<div class="carousel-content container">
 							<h2 class="animate__animated animate__fadeInDown carousel-text">
-								Save Your Relationship Before It’s Too Late
+								Consult us and experience Sex like never before!
 							</h2>
 							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
 						</div>
@@ -157,7 +157,7 @@
 					<div class="carousel-container">
 						<div class="carousel-content container">
 							<h2 class="animate__animated animate__fadeInDown carousel-text">
-								Save Your Relationship Before It’s Too Late
+								We know and we can help you in having wonderful sex!
 							</h2>
 							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
 						</div>
@@ -170,7 +170,7 @@
 					<div class="carousel-container">
 						<div class="carousel-content container">
 							<h2 class="animate__animated animate__fadeInDown carousel-text">
-								Save Your Relationship Before It’s Too Late
+								Sex is an art! And we can help you master it!
 							</h2>
 							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
 						</div>
@@ -183,7 +183,7 @@
 					<div class="carousel-container">
 						<div class="carousel-content container">
 							<h2 class="animate__animated animate__fadeInDown carousel-text">
-								Save Your Relationship Before It’s Too Late
+								With our rich experience, you will have tremendous sex!
 							</h2>
 							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
 						</div>
@@ -196,7 +196,7 @@
 					<div class="carousel-container">
 						<div class="carousel-content container">
 							<h2 class="animate__animated animate__fadeInDown carousel-text">
-								Save Your Relationship Before It’s Too Late
+								We'll help you have a super healthy sex life!
 							</h2>
 							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
 						</div>
@@ -209,7 +209,7 @@
 					<div class="carousel-container">
 						<div class="carousel-content container">
 							<h2 class="animate__animated animate__fadeInDown carousel-text">
-								Save Your Relationship Before It’s Too Late
+								We can make you a man you wish to become! We're just a call away!
 							</h2>
 							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
 						</div>
@@ -222,7 +222,7 @@
 					<div class="carousel-container">
 						<div class="carousel-content container">
 							<h2 class="animate__animated animate__fadeInDown carousel-text">
-								Save Your Relationship Before It’s Too Late
+								We know how you can have sex just like the ones who you see on the internet!
 							</h2>
 							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
 						</div>
@@ -235,7 +235,7 @@
 					<div class="carousel-container">
 						<div class="carousel-content container">
 							<h2 class="animate__animated animate__fadeInDown carousel-text">
-								Save Your Relationship Before It’s Too Late
+								Don't wait for your partner to complain. Call us right away!
 							</h2>
 							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
 						</div>
@@ -666,11 +666,7 @@
 										impotence that is usually temporary and doesn’t need medical treatment. But
 										if the problem persists, it can affect your life and self-esteem.
 									</li>
-									<li><i class="ri-check-double-line"></i>ED constantly obstructs your ability to
-										achieve and maintain an erection for satisfactory sexual performance. ED is
-										classified on the basis of its extent such as mild, normal or severe ED level or
-										no erection at all when a man doesn’t
-										achieve erection for satisfactory intercourse.</li>
+									<li><a href="erectile-dysfunction.html" target="_">Read More ...</a></li>
 								</ul>
 							</div>
 							<div class="col-lg-6 order-1 order-lg-2 text-center" data-aos="fade-up"
@@ -686,13 +682,6 @@
 								<h3>Premature ejaculation is a type of sexual dysfunction that occurs when a man has an
 									orgasm and releases (ejaculates)
 									semen sooner than he or his partner would like.</h3>
-								<p>
-									It often happens before or shortly after penetration during intercourse. Premature
-									ejaculation can be a frustrating
-									experience for both you and your sexual partner and makes your sex lives less
-									enjoyable. However, the good news is that
-									it’s usually fixable!
-								</p>
 								<p class="font-italic">
 									Physical, chemical and emotional/psychological factors cause premature ejaculation.
 
@@ -711,11 +700,7 @@
 									<li><i class="ri-check-double-line"></i> A penis that is extra sensitive to
 										stimulation.
 									</li>
-									<li><i class="ri-check-double-line"></i> Performance anxiety. Could be due to the
-										nervousness of being with a new partner, anxiousness of having sex again after
-										a long period of abstinence, lack of confidence, guilt, being overly excited or
-										stimulated or other reasons.
-									</li>
+									<li><a href="premature-ejaculation.html" target="_">Read More ...</a></li>
 								</ul>
 							</div>
 							<div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -731,14 +716,11 @@
 									clinically unproven <strong>male
 										enhancement products</strong>.
 								</h3>
-								<p>
-									When you have low sexual desire, you lose interest in engaging in a physical relationship. It has found that minor sexual problems can often lead to impotence later in life if they are not treated. The problem is that people don’t want to discuss such problems due to embarrassment and so they are reluctant to consult with doctors about these issues. You should not hesitate and go to an Ayurvedic sexologist doctor for effective treatment. This is because, rather than addressing the root cause of the problem, a lot of other treatment methods target only the symptoms.
-								</p>
 								<ul>
 									<li><i class="ri-check-double-line"></i> Moreover, the medicines used in the treatments have harmful side effects.</li>
 									<li><i class="ri-check-double-line"></i> Ayurveda is able to give you a complete solution to this problem without any side effects. It is completely safe and natural.
 									</li>
-									<li><i class="ri-check-double-line"></i> Our sexual medicine doctors will give you Ayurvedic medicines according to your body type and they will work on the factors like depression, anxiety and stress, which lower your sex drive. On taking these medicines, your body vitality and blood flow will increase. It will increase your libido without any side effects.</li>
+									<li><a href="low-sexual-desire.html" target="_">Read More ...</a></li>
 								</ul>
 								<p class="font-italic">
 								</p>
@@ -753,9 +735,6 @@
 						<div class="row">
 							<div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
 								<h3>Oligospermia is a condition in which a man ejaculates inadequate count of sperms in semen to make her pregnant.</h3>
-								<p>
-									Herbal treatment is recommended to fix this problem in a natural way. Lack of sperms or Oligospermia is the major cause of male infertility. It is medically accepted that a man needs to release 20 million sperms in each mm of semen to impregnate her female partner. Lack of sperm count terribly decreases the chances.
-								</p>
 								<p class="font-italic">
 									When a man suffers from Oligospermia, herbal treatment is the most effective, safe and natural cure for this condition. It doesn’t create any negative effects on a couple.
 								</p>
@@ -765,6 +744,7 @@
 									<li><i class="ri-check-double-line"></i> Prolong use of drugs.</li>
 									<li><i class="ri-check-double-line"></i> Extensive consumption of alcohol.</li>
 									<li><i class="ri-check-double-line"></i> Bad food habits such as spicy food and improper diet.</li>
+									<li><a href="male-infertility.html" target="_">Read More ...</a></li>
 								</ul>
 							</div>
 							<div class="col-lg-6 order-1 order-lg-2 text-center">
