--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<title>Dr. Ayurveda Sexologist</title>
+	<title>#1 Sexologist | Ayurvedic Sexologist | Top Sexologist</title>
 	<meta
 		content="24 ×7 TOP AYURVEDIC SEXOLOGIST IN INDIA, TOP AYURVEDIC SEXOLOGIST FOR PREMATURE EJACULATION, ERECTILE DYSFUNCTION, LOW SEXUAL DESIRE, OLIGOSPERMIA"
 		name="description">
