--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
 
 	<title>#1 Sexologist | Ayurvedic Sexologist | Top Sexologist</title>
 	<meta
-		content="24 ×7 TOP AYURVEDIC SEXOLOGIST IN INDIA, TOP AYURVEDIC SEXOLOGIST FOR PREMATURE EJACULATION, ERECTILE DYSFUNCTION, LOW SEXUAL DESIRE, OLIGOSPERMIA"
+		content="India's most trusted Sexologist, Ayurvedic Sexologist for treatment of Erectile Dysfunction, Premature Ejaculation, Nightfall and Penis Enlargement. Best sex doctor."
 		name="description">
 	<meta
-		content="24 ×7 TOP AYURVEDIC SEXOLOGIST IN INDIA, TOP AYURVEDIC SEXOLOGIST FOR PREMATURE EJACULATION, ERECTILE DYSFUNCTION, LOW SEXUAL DESIRE, OLIGOSPERMIA"
+		content="India's most trusted Sexologist, Ayurvedic Sexologist for treatment of Erectile Dysfunction, Premature Ejaculation, Nightfall and Penis Enlargement. Best sex doctor."
 		name="keywords">
 
+	<meta name="keywords"
+		content="Ayurvedic Sex Clinic in India, Ayurvedic Sex Counsellor in India, Ayurvedic Sex doctor in India, Ayurvedic Sexologist Doctors For Male in India, Ayurvedic Sexologist in India, Ayurvedic Sexual Disorders Treatment in India, Ayurvedic Sexual Dysfunctions Treatment in India, Ayurvedic Sexual health Doctor in India, Ayurvedic Sexual Health Treatment in India, Best Ayurvedic Sex Clinic in India, Best Ayurvedic Sex doctor in India, Best Ayurvedic Sex health Clinic in India, Best Ayurvedic Sex specialist in India, Best Ayurvedic Sexologist Doctor in India, Best Ayurvedic Sexologist in India, Best Sex Clinic in India, Best Sex doctor in India, Best Sex health Clinic in India, Best Sex specialist in India, Best Sexologist Doctor in India, Best Sexologist in India, Erectile Dysfunction Ayurvedic Treatment in India, Erectile Dysfunction Treatment in India, Male infertility Ayurvedic Treatment in India, Male infertility Treatment in India, Premature Ejaculation Treatment in India, Ayurvedic Sex Health Specialist in India, Sex Clinic in India, Sex Counsellor in India, Sex doctor in India, Sex Health Specialist in India, Sexologist Doctors For Male in India, Sexologist in India, Sexual Disorders Treatment in India, Sexual Dysfunctions Treatment in India, Sexual health Ayurvedic Clinic in India, Sexual health Ayurvedic expert in India, Sexual health Clinic in India, Sexual health Doctor in India, Sexual health expert in India, Sexual Health Treatment in India, Top Ayurvedic Sex doctor in India, Top Ayurvedic Sexologist in India, Top Sex doctor in India, Top Sexologist in India">
+
 	<!-- Favicons -->
-	<link href="https://res.cloudinary.com/suvishakha/image/upload/v1632222297/drayurveda/logo_xio8kf.png" rel="icon">Î
+	<link href="https://res.cloudinary.com/suvishakha/image/upload/v1632222297/drayurveda/logo_xio8kf.png" rel="icon">
 	<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
 	<!-- Google Fonts -->
@@ -57,7 +60,9 @@
 				<div class="col-xl-10 d-flex align-items-center">
 					<!-- <h1 class="logo mr-auto"><a href="index.html">Dr. Ayurveda<span>.</span></a></h1> -->
 					<!-- Uncomment below if you prefer to use an image logo -->
-					<a href="index.html" class="logo mr-auto"><img src="https://res.cloudinary.com/suvishakha/image/upload/v1632222297/drayurveda/logo_xio8kf.png" alt="">
+					<a href="index.html" class="logo mr-auto"><img
+							src="https://res.cloudinary.com/suvishakha/image/upload/v1632222297/drayurveda/logo_xio8kf.png"
+							alt="">
 						<span style="color: black;">Dr. Ayurveda </span><span>Sexologist</span>
 					</a>
 
@@ -120,7 +125,9 @@
 							<h2 class="animate__animated animate__fadeInDown carousel-text">
 								Save Your Relationship Before It’s Too Late
 							</h2>
-							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+							<a href="#sectionContactUs"
+								class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us
+								Discreetly</a>
 						</div>
 					</div>
 				</div>
@@ -133,7 +140,9 @@
 							<h2 class="animate__animated animate__fadeInDown carousel-text">
 								Your partner needs better sex. So do you!
 							</h2>
-							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+							<a href="#sectionContactUs"
+								class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us
+								Discreetly</a>
 						</div>
 					</div>
 				</div>
@@ -146,7 +155,9 @@
 							<h2 class="animate__animated animate__fadeInDown carousel-text">
 								Consult us and experience Sex like never before!
 							</h2>
-							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+							<a href="#sectionContactUs"
+								class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us
+								Discreetly</a>
 						</div>
 					</div>
 				</div>
@@ -159,7 +170,9 @@
 							<h2 class="animate__animated animate__fadeInDown carousel-text">
 								We know and we can help you in having wonderful sex!
 							</h2>
-							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+							<a href="#sectionContactUs"
+								class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us
+								Discreetly</a>
 						</div>
 					</div>
 				</div>
@@ -172,7 +185,9 @@
 							<h2 class="animate__animated animate__fadeInDown carousel-text">
 								Sex is an art! And we can help you master it!
 							</h2>
-							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+							<a href="#sectionContactUs"
+								class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us
+								Discreetly</a>
 						</div>
 					</div>
 				</div>
@@ -185,7 +200,9 @@
 							<h2 class="animate__animated animate__fadeInDown carousel-text">
 								With our rich experience, you will have tremendous sex!
 							</h2>
-							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+							<a href="#sectionContactUs"
+								class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us
+								Discreetly</a>
 						</div>
 					</div>
 				</div>
@@ -198,7 +215,9 @@
 							<h2 class="animate__animated animate__fadeInDown carousel-text">
 								We'll help you have a super healthy sex life!
 							</h2>
-							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+							<a href="#sectionContactUs"
+								class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us
+								Discreetly</a>
 						</div>
 					</div>
 				</div>
@@ -211,7 +230,9 @@
 							<h2 class="animate__animated animate__fadeInDown carousel-text">
 								We can make you a man you wish to become! We're just a call away!
 							</h2>
-							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+							<a href="#sectionContactUs"
+								class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us
+								Discreetly</a>
 						</div>
 					</div>
 				</div>
@@ -224,7 +245,9 @@
 							<h2 class="animate__animated animate__fadeInDown carousel-text">
 								We know how you can have sex just like the ones who you see on the internet!
 							</h2>
-							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+							<a href="#sectionContactUs"
+								class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us
+								Discreetly</a>
 						</div>
 					</div>
 				</div>
@@ -237,7 +260,9 @@
 							<h2 class="animate__animated animate__fadeInDown carousel-text">
 								Don't wait for your partner to complain. Call us right away!
 							</h2>
-							<a href="#sectionContactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Discreetly</a>
+							<a href="#sectionContactUs"
+								class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us
+								Discreetly</a>
 						</div>
 					</div>
 				</div>
@@ -338,7 +363,9 @@
 								<div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
 									<i class="bx bx-images"></i>
 									<h4>Low Sexual Desire</h4>
-									<p>When you have low sexual desire, you lose interest in engaging in a physical relationship. It has been found that minor sexual problems can often lead to impotence later in life if they are not treated.
+									<p>When you have low sexual desire, you lose interest in engaging in a physical
+										relationship. It has been found that minor sexual problems can often lead to
+										impotence later in life if they are not treated.
 									</p>
 								</div>
 								<div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
@@ -559,9 +586,11 @@
 							<div class="member-info">
 								<h4>Dr. Akshayanand Vashisht</h4>
 								<span>Senior Doctor</span>
-								<p class="mt-3">Dr. Akshayanand Vashisht is an ayurvedic doctor. He has completed his B.A.M.S. degree from Guru Ravidas Ayurved University Hoshiarpur,  Punjab.
+								<p class="mt-3">Dr. Akshayanand Vashisht is an ayurvedic doctor. He has completed his
+									B.A.M.S. degree from Guru Ravidas Ayurved University Hoshiarpur, Punjab.
 									<br><br>
-									He has 6 years of strong experience in treating male disorders like <strong>Erectile Dysfunction, Premature Ejaculation and Low Libido </strong> in men.
+									He has 6 years of strong experience in treating male disorders like <strong>Erectile
+										Dysfunction, Premature Ejaculation and Low Libido </strong> in men.
 							</div>
 
 							<div style="margin-bottom: 15px;">
@@ -717,8 +746,11 @@
 										enhancement products</strong>.
 								</h3>
 								<ul>
-									<li><i class="ri-check-double-line"></i> Moreover, the medicines used in the treatments have harmful side effects.</li>
-									<li><i class="ri-check-double-line"></i> Ayurveda is able to give you a complete solution to this problem without any side effects. It is completely safe and natural.
+									<li><i class="ri-check-double-line"></i> Moreover, the medicines used in the
+										treatments have harmful side effects.</li>
+									<li><i class="ri-check-double-line"></i> Ayurveda is able to give you a complete
+										solution to this problem without any side effects. It is completely safe and
+										natural.
 									</li>
 									<li><a href="low-sexual-desire.html" target="_">Read More ...</a></li>
 								</ul>
@@ -734,16 +766,20 @@
 					<div class="tab-pane" id="tab-4">
 						<div class="row">
 							<div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
-								<h3>Oligospermia is a condition in which a man ejaculates inadequate count of sperms in semen to make her pregnant.</h3>
+								<h3>Oligospermia is a condition in which a man ejaculates inadequate count of sperms in
+									semen to make her pregnant.</h3>
 								<p class="font-italic">
-									When a man suffers from Oligospermia, herbal treatment is the most effective, safe and natural cure for this condition. It doesn’t create any negative effects on a couple.
+									When a man suffers from Oligospermia, herbal treatment is the most effective, safe
+									and natural cure for this condition. It doesn’t create any negative effects on a
+									couple.
 								</p>
 								<ul>
 									<li><i class="ri-check-double-line"></i> Lack of physical activities.</li>
 									<li><i class="ri-check-double-line"></i> Insufficient testosterone.</li>
 									<li><i class="ri-check-double-line"></i> Prolong use of drugs.</li>
 									<li><i class="ri-check-double-line"></i> Extensive consumption of alcohol.</li>
-									<li><i class="ri-check-double-line"></i> Bad food habits such as spicy food and improper diet.</li>
+									<li><i class="ri-check-double-line"></i> Bad food habits such as spicy food and
+										improper diet.</li>
 									<li><a href="male-infertility.html" target="_">Read More ...</a></li>
 								</ul>
 							</div>
